# dow

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_PLAN.md  PYPI_README.md  README.md  VIDEO_SCRIPT_BIRYANI.md  build_backend.py  conftest.py  evals.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
aiver/: cli.py  embeddings.py  gitstore.py  metrics.py  providers.py  report.py  spec.py  store.py
dashboard/: .gitignore  README.md  evals.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  themes.ts  types.ts
dashboard/src/components/: AppShell.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx
dashboard/src/components/compare/: CompareSection.tsx  DiffView.tsx  DriftScoreGauge.tsx  VerdictCard.tsx
dashboard/src/components/dashboard/: DashboardSection.tsx  MetricsCards.tsx  VersionHistory.tsx  VersionTree.tsx
dashboard/src/components/details/: ConfigSection.tsx  MetricsSection.tsx  OutputsSection.tsx  VersionDetailsSection.tsx
dashboard/src/components/run/: GetStarted.tsx  NewRunModal.tsx  SpecEditor.tsx  SpecEditorModal.tsx
dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  Reveal.tsx  SegmentedControl.tsx  Sparkline.tsx  VersionSelect.tsx  icons.tsx
dashboard/src/data/: loadData.ts  metrics.ts  mockData.ts
dashboard/src/hooks/: useTheme.ts
dashboard/src/lib/: diff.ts  drift.ts  format.ts  tree.ts
dashboard/src/store/: AppStore.tsx
demo/: .gitignore  README.md  RUNBOOK.md  chatbot.py  evals.py  run_demo.py
demo/recording/: make_voiceover.ps1  package-lock.json  package.json  record_demo.ps1  timeline.json  tour_dashboard.mjs
demo/specs/: chatbot.yaml
dow/: cli.py  dashboard.py  embeddings.py  evaluators.py  gitstore.py  mcp_server.py  metrics.py  providers.py  report.py  runner.py  service.py  spec.py  store.py
dow/docs/: README.md  aggregate.txt  commit.txt  compare.txt  dashboard.txt  eval.txt  explain.txt  help.txt  history.txt  init.txt  inspect.txt  man.txt  run.txt  suite.txt  tag.txt  tree.txt  trend.txt
man/: dow.1
runs/summarization/: 2026-06-24T12-21-38Z.json  HEAD.json
scripts/: demo.py  showcase.py
specs/: summarization.yaml
tests/: test_aggregators.py  test_agnostic.py  test_comparators.py  test_drift_label.py  test_gate.py  test_gitstore_isolation.py  test_manpage.py  test_mcp.py  test_plots.py  test_providers_auth.py  test_security.py  test_spec.py  test_store_atomic.py  test_store_payload.py  test_suite.py  test_trend.py
