[build-system]
requires = ["setuptools>=68"]
# In-tree backend (build_backend.py) compiles the dashboard into dow/web before
# setuptools packages it, so wheels always bundle fresh UI assets. Set
# DOW_SKIP_DASHBOARD_BUILD=1 to skip the npm build.
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "dow"
version = "0.1.0"
description = "Drift Observation Workbench - Git for AI behavior."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "numpy>=1.26",
    "pyyaml>=6",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
local = ["sentence-transformers>=2.7"]

[project.scripts]
dow = "dow.cli:main"

[tool.setuptools]
packages = ["dow"]

[tool.setuptools.package-data]
dow = ["docs/*.txt", "web/*", "web/assets/*"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/dow.1"]
