[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dow"
version = "0.1.0"
description = "Drift Observation Workbench - Git for AI behavior."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "numpy>=1.26",
    "pyyaml>=6",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
local = ["sentence-transformers>=2.7"]
# Model Context Protocol server (dow-mcp) exposing the core workbench to LLM clients.
mcp = ["mcp>=1.9"]

[project.scripts]
dow = "dow.cli:main"
dow-mcp = "dow.mcp_server:main"

[tool.setuptools]
packages = ["dow"]

[tool.setuptools.package-data]
dow = ["docs/*.txt"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/dow.1"]
